# Prizm-Hub

./: Cargo.toml  DEPLOYMENT.md  OIDC_GUIDE.md  README.md  auth-system-doc.md  docs_permissions.sql  initial_data.sql  schema.sql  surrealdb_refactored.md
src/: config.rs  error.rs  main.rs
src/models/: account_lockout.rs  identity_provider.rs  mfa.rs  mod.rs  oidc_client.rs  oidc_token.rs  password_reset.rs  permission.rs  role.rs  session.rs  sso_session.rs  user.rs  user_activity.rs  user_preferences.rs  user_profile.rs  user_role.rs
src/routes/: audit.rs  auth.rs  mod.rs  oidc.rs  oidc_client.rs  rbac.rs  sso_session.rs  user_management.rs
src/services/: account_lockout.rs  audit.rs  auth.rs  database.rs  email.rs  mfa.rs  mod.rs  oauth.rs  oidc.rs  oidc_client_management.rs  rate_limiter.rs  rbac.rs  sso_session_management.rs  user_management.rs
src/utils/: jwt.rs  mod.rs  permission_middleware.rs  rate_limit_middleware.rs
