[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.4", features = ["cors"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tokio = { version = "1.28", features = ["full"] }

# 数据库
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
surrealdb = { version = "1.5.6", features = ["protocol-http"] }

# 认证相关
jsonwebtoken = "8.3"
argon2 = "0.5"
oauth2 = "4.4"
totp-rs = { version = "5.0", features = ["qr", "serde"] }
qrcode = "0.12"
base32 = "0.4"
rand = "0.8"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志和配置
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 工具库
uuid = { version = "1.3", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
dotenv = "0.15"

# 加密和哈希
sha2 = "0.10"

# URL 编码
urlencoding = "2.1"
serde_urlencoded = "0.7"

# 邮件发送
lettre = { version = "0.10", features = ["builder", "smtp-transport", "tokio1-native-tls"] }

[dev-dependencies]
tokio-test = "0.4"
